kiali/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-services
spec:
  hosts:
    - "kiali.istio.com"
  gateways:
    - istio-system/microservice-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            port:
              number: 20001
            host: kiali.istio-system.svc.cluster.local
